# NEW_VideoChaosCipher

./: .gitignore  CMakeLists.txt
include/: SafeQueue.h  encryptor.h
src/: encryptor.cpp  main.cpp  test  test_encryptFrame.cpp
